// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RuleDetail renders, isHeader false 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div>
      <OutcomeChip
        count={1}
        outcomeType="fail"
      />
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="failed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
       (
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            Object {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
      ) 
      <GuidanceTags
        deps={Object {}}
        links={
          Array [
            Object {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            Object {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;

exports[`RuleDetail renders, isHeader true 1`] = `
<React.Fragment>
  <div
    className="rule-detail"
  >
    <div
      aria-level={3}
      role="heading"
    >
      <OutcomeChip
        count={1}
        outcomeType="fail"
      />
       
      <span
        className="rule-details-id"
      >
        <NewTabLink
          aria-describedby="failed-rule-rule id-description"
          aria-label="rule rule id"
          href="url://help.url"
        >
          rule id
        </NewTabLink>
      </span>
      : 
      <span
        className="rule-details-description"
        id="failed-rule-rule id-description"
      >
        rule description
      </span>
       (
      <GuidanceLinks
        links={
          Array [
            Object {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            Object {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
      ) 
      <GuidanceTags
        deps={Object {}}
        links={
          Array [
            Object {
              "href": "url://guidance-01.link",
              "text": "guidance-01",
            },
            Object {
              "href": "url://guidance-02.link",
              "text": "guidance-02",
            },
          ]
        }
      />
    </div>
  </div>
</React.Fragment>
`;
